--- a/files/nginx.conf.j2
+++ b/files/nginx.conf.j2
@@ -1,6 +1,6 @@
 server {
        listen {{ http_port }};
-       root /var/www/html;
+       root /var/www/wp.example.com;
        index index.php index.html index.htm index.nginx-debian.html;
        server_name {{ http_host }};
 
